--- a/cppEditor/mainwindow.ui
+++ b/cppEditor/mainwindow.ui
@@ -20,11 +20,14 @@
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>-10</x>
       <y>0</y>
-      <width>801</width>
+      <width>811</width>
       <height>601</height>
      </rect>
+    </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustToContents</enum>
     </property>
    </widget>
   </widget>
@@ -44,6 +47,7 @@
     <addaction name="actionOpen"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
+    <addaction name="actionClose"/>
     <addaction name="actionExit"/>
    </widget>
    <addaction name="menuFile"/>
@@ -66,6 +70,11 @@
   <action name="actionSave_As">
    <property name="text">
     <string>Save As</string>
+   </property>
+  </action>
+  <action name="actionClose">
+   <property name="text">
+    <string>Close File</string>
    </property>
   </action>
  </widget>
