--- a/cppEditor/images.qrc
+++ b/cppEditor/images.qrc
@@ -5,5 +5,6 @@
         <file>IMG/file.png</file>
         <file>IMG/logout.png</file>
         <file>IMG/save.png</file>
+        <file>IMG/notepad_mainwindow_ico.png</file>
     </qresource>
 </RCC>
